--- a/index_voice.html
+++ b/index_voice.html
@@ -5,22 +5,19 @@
     <title>音声認識サンプル</title>
 </head>
 <body>
-    <h2>音声認識サンプル</h2>
+    <h2>音声認識・文字数返し</h2>
     <button id="btn">start</button>
     <div id="content"></div>
 
 <script>
-//音声認識の準備
 const speech = new webkitSpeechRecognition();
 speech.lang = 'ja-JP';
 
-//使用する変数を用意
 const btn = document.getElementById('btn');
 const content = document.getElementById('content');
 
 
 btn.addEventListener('click' , function() {
-    // 音声認識をスタート
     speech.start();
 });
 
@@ -29,8 +26,10 @@ speech.onresult = function(e) {
          if(e.results[0].isFinal){
              var autotext =  e.results[0][0].transcript
              console.log(e);
+             var textlength = autotext.length;
              console.log(autotext);
              content.innerHTML += '<div>'+ autotext +'</div>';
+             content.innerHTML += '<div>'+ textlength +'</div>';
           }
      }
      
