--- a/index_voice.html
+++ b/index_voice.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>音声認識サンプル</title>
+    <title>音声認識</title>
 </head>
 <body>
     <h2>音声認識・文字数返し</h2>
